--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
   display: block;
 }
 .header-page-bg-image {
-  background-image: url(../img/header-bg-image.jpg);
+  background-image: url(../img/header-bg-image.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -146,7 +146,7 @@ body {
   color: inherit;
 }
 .header-image {
-  background-image: url(../img/header-bg.png);
+  background-image: url(../img/header-bg.webp);
   background-size: cover;
   background-repeat: no-repeat;
   /* background-position: center left -0.625rem; */
@@ -1686,6 +1686,6 @@ body {
     margin-bottom: 10px;
   }
   .header-page-bg-image {
-    background-image: url(../img/header-bg-image-mobile.jpg);
+    background-image: url(../img/header-bg-image-mobile.webp);
   }
 }
