--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ body {
   flex-direction: column;
   cursor: pointer;
   padding-top: 40px;
-  max-width: 33%;
+  flex-basis: 33%;
   flex-grow: 1;
   border: 1px solid #ebebf0;
   transition: border 0.2s;
