--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,12 @@ body {
   margin-top: 1.68rem;
   margin-bottom: 2.1rem;
 }
+.section-text {
+  color: rgb(130, 138, 153);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
 .section-light {
   padding-top: 9.125rem;
 }
@@ -1068,6 +1074,171 @@ body {
   display: inline-block;
   text-align: center;
 }
+/* --------------------- SECTION EXPERTS ---------------------- */
+.section-experts {
+  padding-bottom: 0;
+}
+.experts-content {
+  display: flex;
+  align-items: center;
+  gap: 7.5rem;
+}
+.experts-content-article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.25rem;
+}
+.experts-title {
+  max-width: 600px;
+  margin-bottom: 0;
+}
+.expert-article-text {
+  color: rgb(130, 138, 153);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  margin-top: 0;
+}
+.experts-img {
+  flex-basis: 50%;
+  height: 100%;
+}
+/* --------------------- PRODUCTION SECTION ---------------------- */
+.section-our-production {
+  margin-top: 9.375rem;
+}
+.production-content {
+  display: flex;
+  align-items: center;
+  gap: 7.4375rem;
+}
+.production-article-text {
+  color: rgb(130, 138, 153);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
+.production-list {
+  list-style: none;
+  columns: 2;
+  padding-left: 0;
+  margin-top: 2rem;
+}
+.production-list-item {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+  margin-bottom: 1.375rem;
+}
+/* --------------------- RESEARCH SECTION ---------------------- */
+.research-section {
+  padding-bottom: 0;
+}
+.research-text-contant {
+  display: flex;
+  gap: 100px;
+}
+.research-text {
+  color: rgb(130, 138, 153);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
+.research-slider-footer {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-top: 1.875rem;
+}
+.research-slider-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
+}
+.research-text {
+  margin-bottom: 3.125rem;
+}
+.research-slider-buttons {
+  display: flex;
+  justify-content: end;
+}
+.research-card-image {
+  width: 100%;
+}
+/* --------------------- AUTOHIM PRODUCTION SECTION ---------------------- */
+.autohim-production {
+  margin-top: 6.25rem;
+  padding-bottom: 0;
+}
+.autohim-production-contant-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 7.5rem;
+}
+/* --------------------- MANUFACTURE AUTOHIM SECTION ---------------------- */
+.manufacture-autohim {
+  position: relative;
+  min-height: 41.25rem;
+  margin-top: 150px;
+  padding-bottom: 0;
+}
+.manufacture-autohim-img {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.manufacture-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 45rem;
+  min-height: 41.25rem;
+}
+.autohim-manufacture-list {
+  columns: 2;
+  list-style: none;
+  padding-left: 0;
+}
+.autohim-manufacture-item {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+/* --------------------- TYPES AUTOHIM SECTION ---------------------- */
+.autohim-types {
+  margin-top: 150px;
+  padding-bottom: 0;
+}
+.autohim-types-text {
+  max-width: 52.5rem;
+}
+.autohim-types-list {
+  padding-left: 0;
+  margin-top: 3.125rem;
+  columns: 4;
+  list-style: none;
+}
+.autohim-types-list-item {
+  margin-bottom: 1.25rem;
+  color: rgb(41, 45, 51);
+  font-family: Noto Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  display: flex;
+  align-items: center;
+  max-width: 19rem;
+}
+.autohim-types-list-item::before {
+  content: "";
+  height: 1px;
+  width: 16px;
+  background-color: #5c8ee6;
+  margin-right: 1.25rem;
+}
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -1395,6 +1566,13 @@ body {
   .footer-menu-wrapper:first-child {
     width: 38rem;
   }
+  .experts-content {
+    flex-direction: column;
+    gap: 3.125rem;
+  }
+  .production-content {
+    flex-direction: column-reverse;
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -1450,6 +1628,9 @@ body {
     margin-top: 1.05rem;
     padding-left: 0.375rem;
     gap: 1.9125rem;
+  }
+  .production-img {
+    width: 100%;
   }
 }
 @media (max-width: 620px) {
@@ -1711,5 +1892,11 @@ body {
   }
   .header-image {
     background-image: url(../img/header-bg-mobile.jpg);
+  }
+  .experts-img {
+    width: 100%;
+  }
+  .production-list {
+    columns: 1;
   }
 }
