--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,7 @@ body {
 }
 .product-card-image {
   width: 100%;
+  height: auto;
   margin-top: 6.675rem;
 }
 /* ---------------------SECTION TRADEMARKS---------------------- */
@@ -1239,6 +1240,99 @@ body {
   background-color: #5c8ee6;
   margin-right: 1.25rem;
 }
+/* --------------------- POLICY SECTION ---------------------- */
+.policy-text {
+  color: rgb(41, 45, 51);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
+/* --------------------- BLOG PAGE ---------------------- */
+.blog-articles-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 1.875rem;
+  list-style: none;
+  padding-left: 0;
+}
+.blog-articles-item {
+  text-decoration: none;
+  position: relative;
+  padding-right: 3.125rem;
+  padding-bottom: 3.125rem;
+  padding-left: 3.125rem;
+  padding-top: 12.375rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.blog-articles-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(41, 45, 51, 0.6);
+  z-index: -1;
+}
+.blog-articles-item:hover .blog-article-title {
+  transform: scale(1.03);
+}
+.blog-articles-item:hover .blog-article-text {
+  transform: scale(1.03);
+}
+.blog-article-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+.blog-article-title,
+.blog-article-text {
+  color: rgb(255, 255, 255);
+  font-size: 1.75rem;
+  font-weight: 400;
+  line-height: 160%;
+  letter-spacing: 0%;
+  transition: transform 0.2s;
+}
+.blog-article-title {
+  margin: 0;
+}
+.blog-article-text {
+  font-size: 1rem;
+  margin: 0;
+}
+.pages-steps {
+  margin-top: 3.125rem;
+}
+.pages-steps-list {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+}
+.pages-steps-item {
+  width: 3.125rem;
+  height: 3.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: border 0.2s;
+  border: 1px solid #fff;
+  cursor: pointer;
+  color: rgb(41, 45, 51);
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 160%;
+}
+.pages-steps-item:hover {
+  border-color: #5c8ee6;
+}
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -1573,6 +1667,10 @@ body {
   .production-content {
     flex-direction: column-reverse;
   }
+  .blog-articles-wrapper {
+    grid-template-columns: repeat(1, 100%);
+    grid-template-rows: repeat(10, 1fr);
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -1898,5 +1996,11 @@ body {
   }
   .production-list {
     columns: 1;
+  }
+  .blog-article-text {
+    display: none;
+  }
+  .pages-steps-list {
+    justify-content: center;
   }
 }
