--- a/css/style.css
+++ b/css/style.css
@@ -342,8 +342,9 @@ body {
   display: none;
 }
 .primary-buttons-wrapper {
-  height: 60px;
+  height: 3.5rem;
   cursor: pointer;
+  margin-top: 1.1375rem;
 }
 .primary-button-prev,
 .primary-button-next {
@@ -379,7 +380,7 @@ body {
   overflow-wrap: break-word;
 }
 .section {
-  padding-bottom: 1.2rem;
+  margin-bottom: 150px;
 }
 .section-title {
   font-family: "Bebas Neue";
@@ -398,9 +399,6 @@ body {
 }
 .section-light {
   padding-top: 9.125rem;
-}
-.section-light-page {
-  padding-top: 2.8625rem;
 }
 .steps {
   display: flex;
@@ -441,7 +439,7 @@ body {
   font-weight: 400;
   line-height: 160%;
   margin-top: 0.625rem;
-  margin-bottom: 1.25rem;
+  margin-bottom: 0.55rem;
 }
 .button-link {
   display: flex;
@@ -464,9 +462,6 @@ body {
   width: 60px;
 }
 /* ---------------------SECTION PRODUCTS---------------------- */
-.section-products {
-  padding-top: 2.9375rem;
-}
 .section-product-cards {
   display: flex;
   flex-wrap: wrap;
@@ -476,7 +471,7 @@ body {
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  padding-top: 40px;
+  padding-top: 15px;
   flex-basis: 33%;
   flex-grow: 1;
   border: 1px solid #ebebf0;
@@ -517,9 +512,6 @@ body {
   margin-top: 6.675rem;
 }
 /* ---------------------SECTION TRADEMARKS---------------------- */
-.trademarks {
-  padding-top: 7.575rem;
-}
 .trademarks-page {
   padding-top: 4.575rem;
 }
@@ -620,10 +612,6 @@ body {
   margin-bottom: 1.75rem;
 }
 /* ---------------------SECTION CLIENTS---------------------- */
-.clients {
-  /* padding-top: 8.175rem; */
-  padding-top: 2.975rem;
-}
 .clients-wrapper {
   display: flex;
   gap: 50px;
@@ -673,9 +661,6 @@ body {
   transform: scale(1.1);
 }
 /* ---------------------SECTION BLOG---------------------- */
-.blog {
-  padding-top: 8.8rem;
-}
 .blog-swiper {
   padding-top: 1.25rem;
 }
@@ -725,22 +710,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 1.85rem;
 }
 .blog-slider-buttons {
   display: flex;
   justify-content: end;
 }
 /* ---------------------SECTION CTA---------------------- */
-.cta {
-  padding-bottom: 3.1875rem;
-}
+
 .bg-grey {
   background: rgb(240, 242, 245);
 }
 .section-cta {
   position: relative;
-  padding-top: 8.45rem;
   padding-bottom: 6.25rem;
   margin-top: 9.975rem;
 }
@@ -1094,7 +1075,7 @@ body {
 .section-experts {
   padding-bottom: 0;
   padding-top: 5.5rem;
-  margin-bottom: 0.4375rem;
+  margin-bottom: 1.1375rem;
 }
 .experts-content {
   display: flex;
@@ -1124,7 +1105,7 @@ body {
 }
 /* --------------------- PRODUCTION SECTION ---------------------- */
 .section-our-production {
-  margin-top: 9.375rem;
+  margin-top: 8.575rem;
 }
 .production-content {
   display: grid;
@@ -1164,7 +1145,9 @@ body {
   display: flex;
   align-items: center;
   gap: 1.25rem;
-  margin-bottom: 1.675rem;
+}
+.production-list-item:not(:last-child) {
+  margin-bottom: 1.875rem;
 }
 .production-img-wrapper {
   grid-area: img;
@@ -1223,13 +1206,12 @@ body {
 .autohim-production-contant-wrapper {
   display: flex;
   align-items: center;
-  gap: 7.5rem;
+  gap: 1.4rem;
 }
 /* --------------------- MANUFACTURE AUTOHIM SECTION ---------------------- */
 .manufacture-autohim {
   position: relative;
   min-height: 41.25rem;
-  margin-top: 150px;
   padding-bottom: 0;
 }
 .manufacture-autohim-img {
@@ -1243,7 +1225,7 @@ body {
   flex-direction: column;
   max-width: 45rem;
   min-height: 41.25rem;
-  padding-top: 2.4375rem;
+  padding-top: 0.4375rem;
 }
 .manufacture-autohim-title {
   margin-bottom: 0.625rem;
@@ -1256,12 +1238,14 @@ body {
 .autohim-manufacture-item {
   display: flex;
   align-items: center;
-  gap: 1.25rem;
-  margin-bottom: 1.25rem;
+  gap: 1.95rem;
+  font-size: 1.16rem;
+}
+.autohim-manufacture-item:not(:last-child) {
+  margin-bottom: 1.35rem;
 }
 /* --------------------- TYPES AUTOHIM SECTION ---------------------- */
 .autohim-types {
-  margin-top: 8.6875rem;
   padding-bottom: 0;
 }
 .autohim-types-text {
@@ -1274,7 +1258,6 @@ body {
   list-style: none;
 }
 .autohim-types-list-item {
-  margin-bottom: 1.25rem;
   color: rgb(41, 45, 51);
   font-family: Noto Sans;
   font-size: 16px;
@@ -1283,6 +1266,9 @@ body {
   display: flex;
   align-items: center;
   max-width: 19rem;
+}
+.autohim-types-list-item:not(:last-child) {
+  margin-bottom: 1.48rem;
 }
 .autohim-types-list-item::before {
   content: "";
@@ -1443,9 +1429,6 @@ body {
   display: none;
 }
 /* --------------------- SEO TITLE ---------------------- */
-.seo-title {
-  padding-bottom: 0.4375rem;
-}
 .seo-content-title {
   color: rgb(41, 45, 51);
   font-size: 28px;
@@ -1458,6 +1441,8 @@ body {
   display: flex;
   align-items: center;
   gap: 1.125rem;
+  padding-top: 7px;
+  padding-left: 5px;
 }
 .seo-link {
   color: rgb(92, 142, 230);
@@ -1509,9 +1494,6 @@ body {
   }
   .header-phone {
     margin-right: 2rem;
-  }
-  .section-cta {
-    margin-top: 2.375rem;
   }
   .cta-image {
     max-width: 40rem;
@@ -1763,7 +1745,6 @@ body {
   .steps-slider-buttons {
     display: flex;
     justify-content: end;
-    margin-top: 1.25rem;
   }
   .product-card {
     flex-basis: 50%;
@@ -1786,11 +1767,6 @@ body {
   }
   .clients-wrapper {
     flex-direction: column;
-  }
-  .clients-list {
-  }
-  .clients-logo-item {
-    margin-bottom: 60px;
   }
   .clients-logo-list {
     grid-template-columns: 210px 300px 210px;
@@ -1915,6 +1891,7 @@ body {
     position: relative;
     max-width: 100%;
     height: auto;
+    margin-top: 3.16rem;
   }
   .autohim-types-list {
     columns: 2;
@@ -1942,7 +1919,7 @@ body {
     justify-content: center;
   }
   .mobile-menu-toggle {
-    padding: 2.22rem;
+    padding: 2.42rem;
   }
   .logo-svg {
     max-width: 10rem;
@@ -1973,7 +1950,7 @@ body {
   }
   .product-card {
     flex-basis: 100%;
-    padding-top: 23px;
+    height: 429px;
   }
   .product-card-text {
     width: 90%;
@@ -1994,7 +1971,7 @@ body {
     height: 11.65rem;
   }
   .section-light {
-    padding-top: 8.325rem;
+    padding-top: 0;
   }
   .section-title {
     margin-bottom: 0.7rem;
@@ -2010,41 +1987,35 @@ body {
     font-size: 14px;
     padding-left: 7px;
   }
-  .section-products {
-    padding-top: 4.6375rem;
-  }
   .section-product-cards {
-    margin-top: 12px;
+    margin-top: 27px;
   }
   .product-card-title {
     font-size: 1.75rem;
-  }
-  .trademarks {
-    padding-top: 4.975rem;
+    width: 22.8125rem;
   }
   .trademarks-card-text {
     padding-top: 8px;
   }
   .trademarks-image {
-    height: 7.9875rem;
+    height: 8.1875rem;
+    padding-top: 2.3125rem;
   }
   .ag-tech-image {
     width: 92px;
-    padding: 0;
+    padding: 9px;
     margin: 0;
+    margin-left: 9px;
   }
   .trademarks-cards {
     margin: 0;
     padding: 0;
-    gap: 60px;
+    gap: 2.975rem;
   }
   .founder-text {
     margin-top: 0;
     margin-bottom: 0.55rem;
-    font-size: 14px;
-  }
-  .clients {
-    padding-top: 0.675rem;
+    font-size: 1.165rem;
   }
   .clients-wrapper {
     gap: 22px;
@@ -2062,14 +2033,13 @@ body {
   }
   .clients-logo-list {
     grid-template-columns: auto auto;
-    grid-template-rows: 130px 86px 137px 95px;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     padding: 0;
+    padding-top: 10px;
+    row-gap: 55px;
   }
   .clients-logo-item:nth-child(9) {
     display: none;
-  }
-  .blog {
-    padding-top: 4.7rem;
   }
   .blog-cards {
     height: 14.95rem;
@@ -2087,12 +2057,6 @@ body {
   }
   .blog-card-text {
     display: none;
-  }
-  .blog-slider-button-prev,
-  .blog-slider-button-next {
-    width: 60px;
-    height: 40px;
-    margin-top: 16px;
   }
   .input-group-wrapper {
     flex-direction: column;
@@ -2114,7 +2078,7 @@ body {
     width: 100%;
   }
   .cta-form {
-    margin-top: 20px;
+    padding-top: 0.5375rem;
   }
   .footer-bottom {
     flex-direction: column;
@@ -2159,9 +2123,6 @@ body {
     height: 66px;
     margin-bottom: 1.9375rem;
   }
-  .cta {
-    padding-bottom: 1.1875rem;
-  }
   .header-page-title {
     font-size: 48px;
   }
@@ -2185,6 +2146,7 @@ body {
   }
   .production-list {
     columns: 1;
+    padding-left: 0.3125rem;
   }
   .blog-article-text {
     display: none;
@@ -2197,9 +2159,12 @@ body {
   }
   .autohim-types-list {
     columns: 1;
+    margin-top: 1.725rem;
+    margin-bottom: 0;
   }
   .autohim-types-list-item {
     max-width: 100%;
+    font-size: 1.22rem;
   }
   .error-code {
     font-size: 14rem;
@@ -2207,22 +2172,12 @@ body {
   .steps {
     margin-bottom: 0;
   }
-  .steps-slider-buttons {
-    margin-top: 0.375rem;
-    height: 3.425rem;
-  }
   .primary-button-prev,
   .primary-button-next {
     width: 5.1125rem;
   }
-  .section-products {
-    padding-top: 7.1375rem;
-  }
   .clients-content {
     width: 100%;
-  }
-  .blog-slider-footer {
-    padding-top: 0.1875rem;
   }
   .header-page {
     padding-top: 1.9rem;
@@ -2231,7 +2186,8 @@ body {
     margin-top: 1.0625rem;
   }
   .expert-article-text {
-    font-size: 14px;
+    font-size: 1.15rem;
+    margin-bottom: 3.25rem;
   }
   .header-features-template {
     margin-top: 2.125rem;
@@ -2246,10 +2202,13 @@ body {
     font-size: 14px;
   }
   .founder-photo {
-    margin-bottom: 1.325rem;
+    margin-bottom: 4.525rem;
+  }
+  .founder-photo-template {
+    margin-bottom: 2.525rem;
   }
   .button-link {
-    padding-top: 0;
+    padding-top: 2.05rem;
   }
   .founder-text {
     margin-bottom: 0;
@@ -2263,13 +2222,100 @@ body {
     font-size: 1.175rem;
   }
   .research-slider-footer {
-    padding-top: 0.9375rem;
+    padding-top: 0.4375rem;
+    height: 4.5rem;
   }
   .primary-button-prev,
   .primary-button-next {
-    height: 75%;
+    height: 100%;
+  }
+  .seo-content-title {
+    padding-top: 0;
+    margin: 0;
+    font-size: 1.65rem;
+  }
+  .section {
+    margin-bottom: 100px;
+  }
+  .production-img {
+    margin-top: 0.625rem;
+  }
+  .production-list-item {
+    font-size: 1.2375rem;
+  }
+  .client-logo {
+    width: 50px;
+    height: 50px;
   }
   .section-cta {
-    padding-top: 6.45rem;
+    padding-bottom: 0;
+    padding-top: 33px;
+  }
+  .section-cta-template {
+    padding-top: 54px;
+  }
+  .cta {
+    margin-bottom: 90px;
+  }
+  .blog {
+    padding-top: 2.125rem;
+  }
+  .autohim-production-text {
+    font-size: 13.9px;
+    margin-bottom: 2.1rem;
+  }
+  .manufacture-autohim-text {
+    font-size: 1.16rem;
+    margin-bottom: 1.9rem;
+  }
+  .autohim-manufacture-item {
+    font-size: 1.16rem;
+  }
+  .manufacture-autohim {
+    margin-bottom: 98px;
+  }
+  .autohim-types-text {
+    font-size: 1.17rem;
+  }
+  .section-products-template {
+    margin-bottom: 0;
+    margin-top: 2.7rem;
+  }
+  .seo-title {
+    margin-top: 3.9rem;
+    margin-bottom: 74px;
+  }
+  .trademarks-page {
+    padding-top: 7.075rem;
+  }
+  .blog-articles-item {
+    padding-top: 8.575rem;
+    padding-right: 1rem;
+    padding-bottom: 1.4rem;
+    padding-left: 1.8rem;
+  }
+  .blog-articles {
+    padding-top: 5rem;
+    margin-bottom: 5.3rem;
+  }
+  .blog-articles-wrapper {
+    row-gap: 1.1rem;
+  }
+  .blog-article-title {
+    line-height: 2rem;
+  }
+  .pages-steps {
+    margin-top: 4.325rem;
+  }
+  .pages-steps-item {
+    width: 3.655rem;
+    height: 3.825rem;
+    font-size: 1.2rem;
+  }
+  .section-light-main {
+    padding-top: 8.125rem;
+  }
+  .trademarks-main {
+    margin-bottom: 10.7rem;
   }
 }
