--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,6 @@ body {
   background-image: url(../img/header-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-position: center left -0.625rem; */
   position: relative;
 }
 .header-image::before {
@@ -263,6 +262,7 @@ body {
   height: 100%;
   width: 15%;
 }
+
 .navbar-button .button-icon {
   display: none;
 }
@@ -315,7 +315,7 @@ body {
 }
 .header-features-item {
   height: auto;
-  padding: 2rem 3.125rem;
+  padding: 2.2rem 3.125rem;
   width: 18rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
 }
@@ -400,11 +400,15 @@ body {
 .section-light {
   padding-top: 9.125rem;
 }
+.section-light-template {
+  padding-top: 0;
+}
 .steps {
   display: flex;
   list-style: none;
   padding: 0;
   padding-top: 1rem;
+  margin-bottom: 0;
 }
 .steps-num {
   color: rgb(92, 142, 230);
@@ -429,7 +433,7 @@ body {
   margin-top: 2.075rem;
   margin-bottom: 0.625rem;
   padding-right: 1.875rem;
-  width: 14.0625rem;
+  width: 15.0625rem;
 }
 .steps-text {
   display: block;
@@ -439,7 +443,7 @@ body {
   font-weight: 400;
   line-height: 160%;
   margin-top: 0.625rem;
-  margin-bottom: 0.55rem;
+  margin-bottom: 0;
 }
 .button-link {
   display: flex;
@@ -449,6 +453,7 @@ body {
   font-weight: 600;
   line-height: 160%;
   text-decoration: none;
+  margin-top: 1.4rem;
 }
 .button-link:before {
   content: "";
@@ -462,6 +467,10 @@ body {
   width: 60px;
 }
 /* ---------------------SECTION PRODUCTS---------------------- */
+.section-products-template {
+  margin-top: 3.3rem;
+  margin-bottom: 1.6rem;
+}
 .section-product-cards {
   display: flex;
   flex-wrap: wrap;
@@ -471,7 +480,7 @@ body {
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  padding-top: 15px;
+  padding-top: 2.1rem;
   flex-basis: 33%;
   flex-grow: 1;
   border: 1px solid #ebebf0;
@@ -578,7 +587,6 @@ body {
 /* ---------------------SECTION FOUNDER---------------------- */
 .founder {
   position: relative;
-  margin-top: 8.1125rem;
 }
 .founder-photo {
   position: absolute;
@@ -591,13 +599,13 @@ body {
 .founder-content-wrapper {
   display: flex;
   justify-content: end;
-  min-height: 41.25rem;
+  min-height: 40.75rem;
 }
 .founder-content {
   display: flex;
   flex-direction: column;
   max-width: 45rem;
-  padding-top: 50px;
+  padding-top: 2.625rem;
 }
 .founder-content .section-title {
   width: 55%;
@@ -636,7 +644,6 @@ body {
   margin-bottom: 1.4375rem;
   color: rgb(41, 45, 51);
   overflow-wrap: anywhere;
-
   font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
@@ -646,6 +653,7 @@ body {
   grid-template-columns: 140px 338px 147px;
   grid-template-rows: 143px 178px 141px;
   padding-top: 2.375rem;
+  padding-bottom: 0.5625rem;
 }
 .clients-logo-item {
   flex-basis: 33%;
@@ -659,6 +667,9 @@ body {
 .clients-logo-item:hover {
   filter: grayscale(0%);
   transform: scale(1.1);
+}
+.client-logo {
+  margin-left: 0.75rem;
 }
 /* ---------------------SECTION BLOG---------------------- */
 .blog-swiper {
@@ -710,13 +721,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 0.7875rem;
 }
 .blog-slider-buttons {
   display: flex;
   justify-content: end;
 }
 /* ---------------------SECTION CTA---------------------- */
-
+.cta {
+  margin-top: 19rem;
+  margin-bottom: 52px;
+}
 .bg-grey {
   background: rgb(240, 242, 245);
 }
@@ -1075,7 +1090,6 @@ body {
 .section-experts {
   padding-bottom: 0;
   padding-top: 5.5rem;
-  margin-bottom: 1.1375rem;
 }
 .experts-content {
   display: flex;
@@ -1104,9 +1118,6 @@ body {
   height: 100%;
 }
 /* --------------------- PRODUCTION SECTION ---------------------- */
-.section-our-production {
-  margin-top: 8.575rem;
-}
 .production-content {
   display: grid;
   grid-template-columns: 1fr 41%;
@@ -1153,11 +1164,6 @@ body {
   grid-area: img;
 }
 /* --------------------- RESEARCH SECTION ---------------------- */
-.research-section {
-  padding-bottom: 0;
-  margin-top: 7.5rem;
-  margin-bottom: 6.1375rem;
-}
 .research-text-contant {
   display: flex;
   gap: 100px;
@@ -1177,7 +1183,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: end;
-  padding-top: 1.875rem;
+  padding-top: 0.375rem;
 }
 .research-slider-card {
   display: flex;
@@ -1201,12 +1207,13 @@ body {
   padding-bottom: 0;
 }
 .autohim-production-content {
-  padding-top: 1.375rem;
+  padding-top: 2.475rem;
 }
 .autohim-production-contant-wrapper {
   display: flex;
   align-items: center;
-  gap: 1.4rem;
+  gap: 7.6rem;
+  max-height: 46rem;
 }
 /* --------------------- MANUFACTURE AUTOHIM SECTION ---------------------- */
 .manufacture-autohim {
@@ -1225,7 +1232,7 @@ body {
   flex-direction: column;
   max-width: 45rem;
   min-height: 41.25rem;
-  padding-top: 0.4375rem;
+  padding-top: 3.1375rem;
 }
 .manufacture-autohim-title {
   margin-bottom: 0.625rem;
@@ -1254,6 +1261,7 @@ body {
 .autohim-types-list {
   padding-left: 0;
   margin-top: 2.725rem;
+  margin-bottom: 0;
   columns: 4;
   list-style: none;
 }
@@ -1268,7 +1276,7 @@ body {
   max-width: 19rem;
 }
 .autohim-types-list-item:not(:last-child) {
-  margin-bottom: 1.48rem;
+  margin-bottom: 1.14rem;
 }
 .autohim-types-list-item::before {
   content: "";
@@ -1284,7 +1292,7 @@ body {
   font-weight: 400;
   line-height: 160%;
   padding-top: 5.0625rem;
-  margin-bottom: 10.25rem;
+  margin-bottom: 2rem;
 }
 /* --------------------- BLOG PAGE ---------------------- */
 .blog-articles {
@@ -1360,6 +1368,7 @@ body {
   justify-content: flex-end;
   list-style: none;
   padding-left: 0;
+  margin-bottom: 0;
 }
 .pages-steps-item {
   width: 3.125rem;
@@ -1455,6 +1464,9 @@ body {
 .seo-link:hover {
   transform: translateX(10px);
 }
+.seo-content-text {
+  margin-top: 0.5rem;
+}
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -1507,6 +1519,9 @@ body {
   }
   .autohim-types-list {
     columns: 3;
+  }
+  .cta {
+    margin-top: 0;
   }
 }
 @media (max-width: 1200px) {
@@ -1602,9 +1617,6 @@ body {
   html {
     font-size: 12px;
   }
-  /* body {
-    width: 992px;
-  } */
   .container {
     max-width: 60rem;
   }
@@ -1951,6 +1963,7 @@ body {
   .product-card {
     flex-basis: 100%;
     height: 429px;
+    padding-top: 15px;
   }
   .product-card-text {
     width: 90%;
@@ -1986,6 +1999,7 @@ body {
     padding-top: 16px;
     font-size: 14px;
     padding-left: 7px;
+    margin-top: 0;
   }
   .section-product-cards {
     margin-top: 27px;
@@ -2153,6 +2167,7 @@ body {
   }
   .pages-steps-list {
     justify-content: center;
+    margin-bottom: 0.75rem;
   }
   .autohim-manufacture-list {
     columns: 1;
@@ -2187,7 +2202,7 @@ body {
   }
   .expert-article-text {
     font-size: 1.15rem;
-    margin-bottom: 3.25rem;
+    margin-bottom: 3.55rem;
   }
   .header-features-template {
     margin-top: 2.125rem;
@@ -2246,10 +2261,11 @@ body {
   .client-logo {
     width: 50px;
     height: 50px;
+    margin-left: 0;
   }
   .section-cta {
     padding-bottom: 0;
-    padding-top: 33px;
+    padding-top: 24px;
   }
   .section-cta-template {
     padding-top: 54px;
@@ -2262,7 +2278,7 @@ body {
   }
   .autohim-production-text {
     font-size: 13.9px;
-    margin-bottom: 2.1rem;
+    margin-bottom: 2.4rem;
   }
   .manufacture-autohim-text {
     font-size: 1.16rem;
@@ -2284,6 +2300,9 @@ body {
   .seo-title {
     margin-top: 3.9rem;
     margin-bottom: 74px;
+  }
+  .seo-content-text {
+    margin-top: 1.1rem;
   }
   .trademarks-page {
     padding-top: 7.075rem;
@@ -2317,5 +2336,34 @@ body {
   }
   .trademarks-main {
     margin-bottom: 10.7rem;
+  }
+  .header-features-item {
+    padding-top: 1.6rem;
+    padding-bottom: 1.6rem;
+    padding-left: 1.6rem;
+    padding-right: 4rem;
+  }
+  .header-features-text {
+    font-size: 1.1rem;
+    margin-top: 1.875rem;
+  }
+  .autohim-production-contant-wrapper {
+    gap: 1.4rem;
+    max-height: 100%;
+  }
+  .autohim-types-list-item:not(:last-child) {
+    margin-bottom: 1.48rem;
+  }
+  .autohim-production-content {
+    padding-top: 1.475rem;
+  }
+  .manufacture-content-wrapper {
+    padding-top: 0;
+  }
+  .primary-buttons-wrapper {
+    margin-top: 2.1375rem;
+  }
+  .policy-text {
+    font-size: 1.15rem;
   }
 }
